# reriutils

./: LICENSE  Makefile.am  NOTICE  README.md  configure.ac  cpucalc.c  diskcalc.c  memcalc.c  myutils.c  readconf.c  script.sh  sockUtils.c  socks.c  sslUtils.c  utiles.c  writelog.c
include/: cpucalc.h  diskcalc.h  memcalc.h  myutils.h  readconf.h  reriutils.h  sockC.h  sockUtils.h  socks.h  sslUtils.h  utiles.h  writelog.h
tests/: Makefile.am
tests/conf/: Makefile.am  conf.c  config.conf
tests/db/: Makefile.am  mysql_db.c
tests/icmp/: Makefile.am  icmpclient.c
tests/if/: Makefile.am  getifinfo.c
tests/log/: Makefile.am  logtest.c
tests/raw/: Makefile.am  raw_capture.c
tests/resource/: Makefile.am  usage.c
tests/ssl/: Makefile.am  sslclient.c  sslcrypto.c  sslserver.c  text.txt
tests/tcp/: Makefile.am  tcpclient.c  tcpserver.c
tests/udp/: Makefile.am  udpclient.c  udpserver.c
